Agregar controlador y servicio para resumen de caja semanal y mensual, y mejorar estilos en la vista de caja